Reports: overflow fix for status content

--- a/app/styles/components/admin.scss
+++ b/app/styles/components/admin.scss
@@ -187,6 +187,10 @@
     }
   }
 
+  &__status-content {
+    overflow: hidden;
+  }
+
   &__status {
     display: flex;
     border-bottom: 1px solid var(--accent-color--med);
